clusters/home/self-hosted/blog-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-nginx
  namespace: self-hosted
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/issue-temporary-certificate: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "application-outline"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "malonso.${SECRET_DOMAIN}"
      secretName: "blog-nginx-tls"
  rules:
    - host: "malonso.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-nginx
                port:
                  number: 80
